# dinteractions-Paginator

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  dinteractions_Paginator.py  setup.cfg  setup.py  testbot.py
.github/workflows/: black-formatter  python-publish.yml
dinteractions_Paginator/: _Paginator.py  __init__.py  errors.py
interactions/ext/paginator/: __init__.py  errors.py  extension.py  paginator.py
src/dinteractions-Paginator/: Paginator.py
