[metadata]
name= dinteractions-Paginator
version= 1.0.0
author= Jugador123
author_email= momocordova@gmail.com
description= Unofficial discord-interactions multi page embed handler
long_description= file: README.md
long_description_content_type = text/markdown
url= https://github.com/JUGADOR123/Paginator.py
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU License
    Operating System :: OS Independent
[option]
package_dir =
    = src
packages = find:
python_requires = >=3.7
[options.packages.find]
where = src